--- a/.builds/gh-sync.yml
+++ b/.builds/gh-sync.yml
@@ -6,7 +6,7 @@ sources:
 tasks:
 - push: |
     # Ensure we are on the main branch, exit build if not
-    cd dotfiles
+    cd homelab-infrastructure
     git diff -s --exit-code origin/main || complete-build
 
     # Push copy of code to GitHub
