CICD: Update script for new destination

--- a/.builds/repo-sync.yml
+++ b/.builds/repo-sync.yml
@@ -5,16 +5,25 @@ sources:
 - https://git.sr.ht/~wrmilling/homelab-infrastructure
 tasks:
 - push: |
+    # Set Repo Name
+    REPO=homelab-infrastructure
+
     # Ensure we are on the main branch, exit build if not
-    cd homelab-infrastructure
-    git diff -s --exit-code origin/main || complete-build
+    cd $REPO
+    git diff -s --exit-code origin/master || complete-build
+
+    # Ignore hosts keys, since we accept them as-is
+    git config --global core.sshCommand 'ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no'
 
     # Push copy of code to GitHub
-    ssh-keyscan -H github.com >> ~/.ssh/known_hosts
-    git remote add github git@github.com:wrmilling/homelab-infrastructure.git
-    git push github main
+    git remote add github git@github.com:wrmilling/${REPO}.git
+    git push github master
 
     # Push copy of code to Codeberg
-    ssh-keyscan -H codeberg.org >> ~/.ssh/known_hosts
-    git remote add codeberg git@codeberg.org:wrmilling/homelab-infrastructure.git
-    git push codeberg main
+    git remote add codeberg git@codeberg.org:wrmilling/${REPO}.git
+    git push codeberg master
+
+    # Push copy of code to GitLab
+    git remote add gitlab git@gitlab.com:WRMilling/${REPO}.git
+    git push gitlab master
+ 
